--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     <h1>Lorem Ipsum</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     <a class="btn button_di-buffala" href="#">Conoce Más</a>
+    <a class="btn button_di-buffala" href="#">Nuevo botón</a>
+
   </header>
 
   <!-- Blog -->
